# ssl_simulator_vista

./: .gitignore  README.md  pyproject.toml  requirements.txt
ssl_simulator_vista/: custom_widgets.py  factories.py  grid.py  grid_loader.py  main.py  toolbars.py
ssl_simulator_vista/grid_layouts/: 2d_canvas.json
ssl_simulator_vista/plotters/: __init__.py  _base_py_plotter.py  meshes.py  plotter_2d_canvas.py  plotter_3d_attitude.py  plotter_3d_canvas.py  plotter_mpl.py  pv_utils.py
ssl_vista/: __init__.py  app.py  cli.py  config.py
ssl_vista/data/: __init__.py  data_manager.py
ssl_vista/data/assets/: Talon1400_reduced.ply
ssl_vista/data/grid_layouts/: 2d_canvas.json  3d_canvas.json  example_mpl.json  mpl_example.py
ssl_vista/data/samples/: data_3d_test.csv  data_uny_test.csv
ssl_vista/grid_layouts/: 3d_canvas.json
ssl_vista/plotters/: __init__.py  _base_plotters.py  _base_py_plotter.py  base_canvas.py  base_mpl.py  factories.py  meshes.py  plotter_2d_canvas.py  plotter_3d_attitude.py  plotter_3d_canvas.py  plotter_canvas.py  plotter_mpl.py
ssl_vista/plotters/pv_utils/: canvas_grid.py  debug.py  factories.py  meshes.py  scene_objects.py
ssl_vista/ui/: __init__.py  custom_widgets.py  grid.py  main_window.py  toolbars.py
